# aronabot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README  README.md  biome.json  drizzle.config.ts  package.json  pnpm-lock.yaml  prisma.config.ts  prod_db.sql  trigger.config.ts  tsconfig.json
.github/workflows/: deploy-jobs.yml
assets/styles/: gacha.css
assets/views/: gacha.pug
data/: banners.json  gifts.json  missions.json  students.json  students_extra.json
prisma/: schema.prisma
src/: buttons.rs  config.rs  data.rs  index.ts  main.rs
src/buttons/: index.ts
src/commands/: fun.rs  index.ts  mod.rs  staff.rs  utils.rs
src/config/: IConfig.ts  index.ts
src/containers/: banners.rs  banners.ts  gifts.rs  gifts.ts  icons.ts  missions.rs  missions.ts  mod.rs  students.rs  students.ts
src/core/: client.ts  server.ts
src/db/: enums.rs  index.ts  mod.rs  models.rs  queries.rs  schema.ts  utils.ts
src/events/: ready.ts
src/gacha/: banner.rs  banner.ts  browser.ts  constants.rs  constants.ts  generate-result.tsx  kind.ts  mod.rs  points.rs  points.ts  pool.rs  pool.ts  preloaded-buffers.ts
src/handlers/: mod.rs
src/models/: AttackType.ts  CombatClass.ts  CombatPosition.ts  CombatRole.ts  DefenseType.ts  Difficulty.ts  Gift.ts  Mission.ts  Rarity.ts  School.ts  Skill.ts  SkillType.ts  Student.ts  Terrain.ts  WeaponType.ts
src/render/: mod.rs
src/scripts/: common.ts  convert.ts  resetRecruitmentPoints.ts  scrapeGifts.ts  scrapeMissions.ts  scrapeRecorobiLevels.ts  scrapeSkills.ts  scrapeStudents.ts  seedGifts.ts  seedMissions.ts  (+1 more)
(+84 files in other folders)
