[package]
name = "aronabot"
version = "1.0.0"
edition = "2021"
description = "Blue Archive themed Discord bot."
license = "MIT"
authors = ["@jozsefsallai"]
repository = "https://github.com/jozsefsallai/aronabot"

[dependencies]
poise = "0.6"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache", "http", "utils", "collector"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
takumi = { version = "2", features = ["from-html"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rand = "0.8"
rand_chacha = "0.3"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
base64 = "0.22"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
sha2 = "0.10"
hex = "0.4"
dashmap = "6"
bytes = "1"

[profile.release]
lto = true
codegen-units = 1
